--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
 anyhow = "1.0.97"
 axum = "0.8.3"
 indexmap = { version = "2.8.0", features = ["serde"] }
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing = "0.1.41"
 tower-http = { version = "0.6.2", features = ["trace", "fs"] }
 chrono = "0.4.40"
